--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,24 +17,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Set up Java (you can specify the version you need)
+    # Step 2: Set up JDK using Eclipse Temurin
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: '11'  # You can use a different Java version if required
-        distribution: 'adoptopenjdk'
+        java-version: '11'  # Specify the Java version you need
+        distribution: 'temurin'  # Use 'temurin' (Eclipse Temurin, previously AdoptOpenJDK)
+        java-package: jdk
+        architecture: x64
 
-    # Step 3: Install Gradle
+    # Step 3: Install Gradle (using the wrapper)
     - name: Install Gradle
       uses: gradle/wrapper-validation-action@v1
 
-    # Step 4: Run the tests using Gradle
+    # Step 4: Run tests with Gradle
     - name: Run tests with Gradle
       run: ./gradlew clean test  # Running Gradle clean and test tasks
 
-    # Step 5: Upload the test results (Optional: If you want to see the test results)
-    # - name: Upload Cucumber reports
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: cucumber-reports
-    #     path: target/cucumber-reports/  # Path where reports are generated
+  
