--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,6 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
@@ -20,4 +17,10 @@ dependencies {
 
 test {
     useTestNG()
+
+    testLogging {
+        events "passed", "failed", "skipped"
+        showStandardStreams = true
+    }
 }
+
