--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,8 +32,8 @@ jobs:
 
     # Step 4: Install Gradle (using the wrapper)
     - name: Install Gradle
-      uses: gradle/actions/wrapper-validation@v3
+      uses: gradle/actions/wrapper-validation@v4
 
-    # Step 5: Run tests with Gradle
+    # Step 4: Run tests with Gradle (no daemon, debug, and stacktrace)
     - name: Run tests with Gradle
-      run: ./gradlew clean test  # Running Gradle clean and test tasks
+      run: ./gradlew clean test --no-daemon --stacktrace --debug --info
