--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,39 +1,39 @@
-name: CI
+# name: CI
 
-on:
-  push:
-    branches:
-      - main  # Trigger this workflow on push to the main branch
-  pull_request:
-    branches:
-      - main  # Trigger this workflow on pull request targeting the main branch
+# on:
+#   push:
+#     branches:
+#       - main  # Trigger this workflow on push to the main branch
+#   pull_request:
+#     branches:
+#       - main  # Trigger this workflow on pull request targeting the main branch
 
-jobs:
-  build:
-    runs-on: ubuntu-latest  # The runner will use the latest Ubuntu image
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest  # The runner will use the latest Ubuntu image
 
-    steps:
-    # Step 1: Checkout the code
-    - name: Checkout code
-      uses: actions/checkout@v2
+#     steps:
+#     # Step 1: Checkout the code
+#     - name: Checkout code
+#       uses: actions/checkout@v2
 
-    # Step 2: Set up JDK using Eclipse Temurin
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'  # Specify the Java version you need
-        distribution: 'temurin'  # Use 'temurin' (Eclipse Temurin, previously AdoptOpenJDK)
-        java-package: jdk
-        architecture: x64
+#     # Step 2: Set up JDK using Eclipse Temurin
+#     - name: Set up JDK 11
+#       uses: actions/setup-java@v2
+#       with:
+#         java-version: '11'  # Specify the Java version you need
+#         distribution: 'temurin'  # Use 'temurin' (Eclipse Temurin, previously AdoptOpenJDK)
+#         java-package: jdk
+#         architecture: x64
 
-    # Step 3: Grant execute permission to gradlew
-    - name: Grant execute permissions to gradlew
-      run: chmod +x ./gradlew  # Ensure gradlew has execute permissions
+#     # Step 3: Grant execute permission to gradlew
+#     - name: Grant execute permissions to gradlew
+#       run: chmod +x ./gradlew  # Ensure gradlew has execute permissions
 
-    # Step 4: Install Gradle (using the wrapper)
-    - name: Install Gradle
-      uses: gradle/actions/wrapper-validation@v4
+#     # Step 4: Install Gradle (using the wrapper)
+#     - name: Install Gradle
+#       uses: gradle/actions/wrapper-validation@v4
 
-    # Step 4: Run tests with Gradle (no daemon, debug, and stacktrace)
-    - name: Run tests with Gradle
-      run: ./gradlew clean test --no-daemon --stacktrace --debug --info
+#     # Step 4: Run tests with Gradle (no daemon, debug, and stacktrace)
+#     - name: Run tests with Gradle
+#       run: ./gradlew clean test --no-daemon --stacktrace --debug --info
