--- a/.github/workflows/gradle1.yml
+++ b/.github/workflows/gradle1.yml
@@ -1,62 +1,35 @@
-name: Java CI with Gradle
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main  # Trigger this workflow on push to the main branch
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # Trigger this workflow on pull request targeting the main branch
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    runs-on: ubuntu-latest  # The runner will use the latest Ubuntu image
 
     steps:
-    - uses: actions/checkout@v4
+    # Step 1: Checkout the code
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    # Step 2: Set up JDK using Eclipse Temurin
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v2
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: '17'  # Specify the Java version you need
+        distribution: 'temurin'  # Use 'temurin' (Eclipse Temurin, previously AdoptOpenJDK)
+        java-package: jdk
+        architecture: x64
 
-
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
-
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
-
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-
-     # Step 3: Grant execute permissions to gradlew
+    # Step 3: Grant execute permissions to gradlew (in case it's missing)
     - name: Grant execute permissions to gradlew
       run: chmod +x ./gradlew  # Ensure gradlew has execute permissions
 
-    # Step 4: Run tests with Gradle
+    # Step 4: Run Gradle build
     - name: Run Gradle build
       run: ./gradlew clean test
