--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ repositories {
 
 dependencies {
     implementation 'io.cucumber:cucumber-java:7.21.1'
-    testImplementation 'io.cucumber:cucumber-testng:7.21.1'
-    testImplementation 'org.testng:testng:7.11.0'
+    implementation 'io.cucumber:cucumber-testng:7.21.1'
+    implementation 'org.testng:testng:7.11.0'
 }
 
 test {
