--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'io.cucumber:cucumber-java:7.21.1'
     implementation 'io.cucumber:cucumber-testng:7.21.1'
     implementation 'org.testng:testng:7.11.0'
+    implementation 'com.microsoft.playwright:playwright:1.51.0'
 }
 
 test {
