--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,11 @@ jobs:
   build:
     runs-on: ubuntu-latest  # The runner will use the latest Ubuntu image
 
+    services:
+      docker:
+        image: docker:19.03.12-dind
+        options: --privileged --network host  # Enabling Docker-in-Docker
+
     steps:
     # Step 1: Checkout the code
     - name: Checkout code
@@ -39,3 +44,27 @@ jobs:
     # Step 4: Run Gradle build
     - name: Run Gradle build
       run: ./gradlew clean test -P"cucumber.filter.tags=${{ github.event.inputs.tag }}"
+
+    # Step 5: Set up Docker for WebSocket server
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build Docker image for WebSocket server
+      run: |
+        docker build -t websocket-server .
+
+    # Step 6: Run Docker container with WebSocket server
+    - name: Run WebSocket container
+      run: |
+        docker run -d -p 3000:3000 websocket-server
+
+    # Step 7: Wait for WebSocket server to start
+    - name: Wait for WebSocket server to start
+      run: |
+        sleep 10  # Adjust based on your WebSocket server's startup time
+
+    # Step 8: Test WebSocket server connection
+    - name: Test WebSocket connection
+      run: |
+        # Example using curl (replace this with a WebSocket test if you have one)
+        curl --max-time 5 http://localhost:3000
